--- a/django_blog/blog/templates/blog/register.html
+++ b/django_blog/blog/templates/blog/register.html
@@ -1,4 +1,7 @@
-{% extends "blog/base.html" %}
+
+{% extends 'blog/base.html' %}
+{% load static %}  {# Static files can be loaded after extending base.html #}
+
 {% block content %}
   <h2>Register</h2>
   <form method="POST">
