--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,3 +1,26 @@
+{% extends "blog/base.html" %}
+
+{% block content %}
+
+<h2>{{ post.title }}</h2>
+<p>{{ post.content }}</p>
+
+<!-- 🔹 Display Associated Tags -->
+<p><strong>Tags:</strong> 
+    {% for tag in post.tags.all %}
+        <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% endfor %}
+</p>
+
+<!-- 🔹 Edit & Delete Post (if Author) -->
+{% if post.author == user %}
+    <a href="{% url 'post-update' post.pk %}">Edit</a> |
+    <a href="{% url 'post-delete' post.pk %}">Delete</a>
+{% endif %}
+
+<hr>
+
+<!-- 🔹 Comments Section -->
 <h2>Comments</h2>
 {% for comment in post.comments.all %}
     <div class="comment">
@@ -12,6 +35,7 @@
     <p>No comments yet.</p>
 {% endfor %}
 
+<!-- 🔹 Add a New Comment -->
 {% if user.is_authenticated %}
     <h3>Add a Comment</h3>
     <form method="post" action="{% url 'comment-create' post.id %}">
@@ -22,3 +46,7 @@
 {% else %}
     <p><a href="{% url 'login' %}">Log in</a> to leave a comment.</p>
 {% endif %}
+
+<a href="{% url 'blog-home' %}">Back to Home</a>
+
+{% endblock %}
