--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -2,11 +2,36 @@
 {% block content %}
     <h2>All Posts</h2>
     <a href="{% url 'post-create' %}">Create New Post</a>
+    
+    <form method="GET" action="{% url 'post-list' %}">
+        <input type="text" name="q" placeholder="Search posts..." value="{{ request.GET.q }}">
+        <button type="submit">Search</button>
+    </form>
+    
+    {% if tags %}
+        <p>Filter by tags:</p>
+        <ul>
+            {% for tag in tags %}
+                <li><a href="{% url 'post-list' %}?tag={{ tag.slug }}">{{ tag.name }}</a></li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    
     {% for post in posts %}
         <div>
             <h3><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h3>
             <p>{{ post.content|truncatewords:20 }}</p>
             <p>By {{ post.author }} on {{ post.date_posted }}</p>
+            
+            {% if post.tags.all %}
+                <p>Tags: 
+                    {% for tag in post.tags.all %}
+                        <a href="{% url 'post-list' %}?tag={{ tag.slug }}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
+            {% endif %}
         </div>
+    {% empty %}
+        <p>No posts available.</p>
     {% endfor %}
 {% endblock %}
